# glance

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: INITIAL_PLAN.md
include/: csv_reader.hpp  delim.hpp  filter.hpp  pager.hpp  tui.hpp  type_inference.hpp
src/: CMakeLists.txt  csv_reader.cpp  delim.cpp  filter.cpp  main.cpp  pager.cpp  tui.cpp  type_inference.cpp
tests/: CMakeLists.txt  basic.csv  edge_cases.csv  large.csv  pipes.csv  quoted.csv  semicolons.csv  tabs.tsv  test_csv_reader.cpp  test_delim.cpp  test_filter.cpp  test_helpers.hpp  test_output.cpp  test_type_inference.cpp  test_unquote.cpp
